# solo-api

./: .env.stage  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  database.db  dev.db  docker-compose.stage.yml  docker-entrypoint.sh  example.env  pyproject.toml
migration/: env.py
migration/versions/: 624d89855ea6_init_create_project_table.py  98083b322359_fix_update_string_length.py  a05a9d4905f4_init_create_project_table.py  b0f3df50b124_fixed_update_project_tag_association.py  f3a4e14ddfe1_update_add_attachment_and_tag.py
migrations/: env.py
migrations/versions/: c93c08db0913_init_rebuild_the_datatable.py
src/api/: config.py  database.py  enums.py  main.py  utils.py
src/api/dependencies/: __init__.py  auth.py  service.py  session.py  setting.py
src/api/domain/: __init__.py  attachment.py  project.py  project_tag.py  tag.py
src/api/domains/: __init__.py  attachment.py  base.py  project.py
src/api/dto/: __init__.py  attachment.py  base.py  entity.py  project.py  project_tag.py  tag.py
src/api/model/: __init__.py  attachment.py  base.py  project.py  project_tag.py
src/api/models/: __init__.py  attachment.py  base.py  project.py  project_tag.py  tag.py
src/api/repo/: __init__.py  base.py  project.py  project_tag.py  tag.py
src/api/router/: __init__.py  (+3 more)
src/solo-api/: database.py  main.py
tests/: conftest.py
tests/domain/: test_project.py
tests/domains/: conftest.py  test_project.py
tests/factories/: domains.py  models.py
tests/factory/: domains.py  dto.py  models.py  repo.py  service.py
tests/model/: conftest.py  test_attachment.py  test_project.py  test_tag.py
tests/models/: conftest.py  project.py  test_attachment.py  test_project.py  test_tag.py
tests/repo/: conftest.py  test_project.py  test_project_tag.py  test_tag.py
tests/service/: conftest.py  test_project.py  test_project_tag.py  test_tag.py
(+29 files in other folders)
