[project]
name = "solo-api"
version = "0.1.0"
description = "API for solo project, which helping people storing their projects info in one place."
authors = [
    {name = "Huang Chuan",email = "river1440@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "nanoid (>=2.0.0,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.40,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
aiosqlite = "^0.21.0"
factory-boy = "^3.3.3"
pytest-asyncio = "^0.26.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.8"
pre-commit = "^4.2.0"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
aiomysql = "^0.2.0"
cryptography = "^44.0.3"

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "auto"
